Fix docs styling on mobile

--- a/crates/docs/src/static/styles.css
+++ b/crates/docs/src/static/styles.css
@@ -582,24 +582,26 @@ pre>samp {
   pointer-events: none;
 }
 
-#llm-prompt-container {
-  background-color: var(--violet-bg);
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: initial;
-}
-
-#llm-prompt-copy-button:hover {
-  border-color: var(--link-hover-color);
-  color: var(--link-hover-color);
-}
-
 .builtins-tip {
   padding: 1em;
   font-style: italic;
   line-height: 1.3em;
+}
+
+.module-header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin-bottom: 48px;
+}
+
+.llm-prompt-link {
+  flex-shrink: 0;
+}
+
+.module-name {
+    flex-grow: 1;
+    margin-bottom: 0;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -637,7 +639,19 @@ pre>samp {
       --top-header-height: 160px;
   }
 
-  #search-shortcut-key {
+  #search-shortcut-key, .header-start-extension, .header-end-extension, #search-label {
+      display: none;
+  }
+
+  #module-search-form {
+      padding: 0 16px;
+      width: 100%;
+      height: auto;
+      margin-bottom: 16px;
+  }
+
+  /* Hide the Copy Link button on mobile. */
+  .entry-name a:first-of-type {
       display: none;
   }
 
@@ -682,7 +696,6 @@ pre>samp {
       font-size: 36px;
       margin-top: 8px;
       margin-bottom: 8px;
-      max-width: calc(100% - 18px);
       overflow: hidden;
       text-overflow: ellipsis;
   }
